--- a/MicrosoftFaceAPI/app/src/main/res/layout/fragment_detection.xml
+++ b/MicrosoftFaceAPI/app/src/main/res/layout/fragment_detection.xml
@@ -10,12 +10,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.api.face.microsoft.microsoftfaceapi.fragments.DetectionFragment">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/view_image"
-        android:layout_above="@+id/browse_button" />
-
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,7 +26,18 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:maxLines="5"
+        android:minLines="5"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/view_image"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/result_text" />
 
 
 </RelativeLayout>
